change file structure, add db_wrapper functionality

--- a/db_wrapper/Dockerfile_db_wrapper
+++ b/db_wrapper/Dockerfile_db_wrapper
@@ -1,6 +1,6 @@
-FROM python:3.8
+FROM python:3
 RUN pip install confluent_kafka
 RUN apt-get update && apt-get install -y iputils-ping nmap 
-ADD processing.py /
+ADD db_wrapper/db_wrapper.py /
 ADD config.py /
-CMD [ "python", "./processing.py" ]
+CMD [ "python", "./db_wrapper.py" ]
