--- a/ingestion/Dockerfile_ingestion
+++ b/ingestion/Dockerfile_ingestion
@@ -2,6 +2,6 @@ FROM python:3.8.8
 RUN pip install confluent_kafka websocket-client 
 RUN pip install alpaca_trade_api
 RUN apt-get update && apt-get install -y iputils-ping nmap 
-ADD ingestion.py /
+ADD ingestion/ingestion.py /
 ADD config.py /
 CMD [ "python", "./ingestion.py" ]
