--- a/reporting/Dockerfile_reporting
+++ b/reporting/Dockerfile_reporting
@@ -1,4 +1,4 @@
 FROM python:3
 RUN apt-get update && apt-get install -y iputils-ping nmap 
-ADD reporting.py /
+ADD reporting/reporting.py /
 CMD [ "python", "./reporting.py" ]
