add SSL protocol

--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -25,7 +25,7 @@ services:
       KAFKA_ZOOKEEPER_CONNECT: zookeeper:2181
       KAFKA_LISTENERS: A://kafka0:29092,B://kafka0:9092,C://kafka0:29094
       KAFKA_ADVERTISED_LISTENERS: A://kafka0:29092,B://localhost:9092,C://:29094
-      KAFKA_LISTENER_SECURITY_PROTOCOL_MAP: A:PLAINTEXT,B:PLAINTEXT,C:PLAINTEXT
+      KAFKA_LISTENER_SECURITY_PROTOCOL_MAP: A:PLAINTEXT,B:SSL,C:SSL
       KAFKA_INTER_BROKER_LISTENER_NAME: A
       KAFKA_AUTO_CREATE_TOPICS_ENABLE: "true"
       KAFKA_OFFSETS_TOPIC_REPLICATION_FACTOR: 1
